# mcp-sentinel

./: README.md  TASKS.md  deploy_lab.py  inspect_defs.py  list_labs_debug.py  pyproject.toml
designs/: enterprise_v1.yaml
src/cml_driver/: __init__.py  __main__.py  server.py  settings.py  types.py
src/cml_driver/schemas/: annotations.py  authentication.py  common.py  external_connector.py  groups.py  image_definitions.py  int_compute.py  interfaces.py  keys.py  labs.py  licensing.py  links.py  network_addresses.py  node_definitions.py  nodes.py  parameters.py  pcap.py  resource_pools.py  responses.py  sample_labs.py  smart_annotations.py  system.py  topologies.py  users.py  web_sockets.py
